--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,500" rel="stylesheet">
-  <title>React App</title>
+  <title>Tic Tac Toe React App</title>
 </head>
 
 <body>
